--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               
             <a href="objetivo.html">Principal Objetivo</a>
             <a href="ansiedad.html">Ansiedad</a>
-            <a href="epresion.html">Depresion</a>
+            <a href="depresion.html">Depresion</a>
 
             
         </div>
