--- a/depresion.html
+++ b/depresion.html
@@ -97,9 +97,12 @@
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-                 <a href="file:///home/chronos/u-83d7868a46a5d891b2e35048f287a2aa5b9f28eb/MyFiles/pagweb/objetivo.html">Principal Objetivo</a>
-            <a href="file:///home/chronos/u-83d7868a46a5d891b2e35048f287a2aa5b9f28eb/MyFiles/pagweb/ansiedad.html">Ansiedad</a>
-            <a href="file:///home/chronos/u-83d7868a46a5d891b2e35048f287a2aa5b9f28eb/MyFiles/pagweb/depresion.html">Depresion</a>
+            
+            <a href="inicio.html">index</a>
+            <a href="objetivo.html">Principal Objetivo</a>
+            <a href="ansiedad.html">Ansiedad</a>
+            <a href="depresion.html">Depresion</a>
+            
         </div>
     </div> 
        <div class="dropdown">
