--- a/ansiedad.html
+++ b/ansiedad.html
@@ -102,7 +102,7 @@
         </button>
         <div class="dropdown-content">
               
-            <a href="inicio.html">index</a>
+            <a href="index.html">Inicio</a>
             <a href="objetivo.html">Principal Objetivo</a>
             <a href="ansiedad.html">Ansiedad</a>
             <a href="depresion.html">Depresion</a>
